backend/k8s/mainnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wenmerge-backend
  namespace: wenmerge

spec:
  selector:
    matchLabels:
      app: wenmerge-backend
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: wenmerge-backend
    spec:
      containers:
      - name: backend
        image: rootwarp/wenmerge-backend:v0.2.0
        ports:
        - containerPort: 9090
